Feat: Modified the blood reqeust model and to accomodate more data